# libcrashreporter-qt

./: .gitignore  CMakeLists.txt
cmake/: macroSetupQt5.cmake
src/libcrashreporter-gui/: CMakeLists.txt  CrashReporter.cpp  CrashReporter.ui
src/libcrashreporter-handler/: CMakeLists.txt
